--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "14.2.9",
+    "@angular/animations": "^14.2.9",
     "@angular/common": "^14.2.9",
     "@angular/compiler": "^14.2.9",
     "@angular/core": "^14.2.9",
@@ -12,7 +12,6 @@
     "@angular/platform-browser": "^14.2.9",
     "@angular/platform-browser-dynamic": "^14.2.9",
     "@angular/router": "^14.2.9",
-    "core-js": "^3.26.0",
     "rxjs": "^7.5.7",
     "zone.js": "^0.11.8"
   },
